# lab-auto-pulumi

./: .copier-answers.yml  .coveragerc  AGENTS.md  CHANGELOG.md  README.md  _typos.toml  mutex_queue  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json  docker-compose.yml  install-ci-tooling.py  on-create-command.sh  post-start-command.sh
.github/: dependabot.yml
.github/workflows/: ci.yaml  publish.yaml  publish_to_staging.yaml
src/lab_auto_pulumi/: __init__.py  constants.py  ec2.py  lib.py  workload.py
src/lab_auto_pulumi/permissions/: lib.py
src/lab_auto_pulumi/s3/: bucket.py
tests/unit/: conftest.py  test_deprecations.py  test_dummy.py  test_ec2.py  test_utils.py
