[project]
name = "lab-auto-pulumi"
version = "0.1.13"
description = "Pulumi helpers. Especially useful for tooling created by the LabAutomationAndScreening github organization."
authors = [
    {name = "Eli Fine"},

]
readme = "README.md"
requires-python = ">=3.12.7"
classifiers = [
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.12",

    "Programming Language :: Python :: 3.13",

]
dependencies = [
    "pulumi>=3.156.0",
    "pulumi-aws>=6.72.0",
    "pulumi-aws-native>=1.26.0",
    "ephemeral-pulumi-deploy>=0.0.4",
    "boto3>=1.37.11",
    "pydantic>=2.10.6",
]


[dependency-groups]
dev = [
    # Specific to this repository

    "boto3-stubs[all]>=1.37.11",

    # Managed by upstream template
    "pyright==1.1.400", # temporarily pin due to bug in 1.1.401 https://github.com/microsoft/pyright/issues/10487
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-randomly>=3.16.0",


]

[tool.setuptools]
license-files = [] # kludge until this bug is fixed https://github.com/pypa/setuptools/issues/4759

[tool.uv]
package = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
