[project]
name = "lab-auto-pulumi"
version = "0.2.0"
description = "Pulumi helpers. Especially useful for tooling created by the LabAutomationAndScreening github organization."
authors = [
    {name = "Eli Fine"},

]
readme = "README.md"
requires-python = ">=3.12.7"
classifiers = [
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.12",

    "Programming Language :: Python :: 3.13",

    "Programming Language :: Python :: 3.14",

]
dependencies = [
    "pulumi>=3.232.0",
    "pulumi-aws>=7.27.0",
    "pulumi-aws-native>=1.62.0",
    "ephemeral-pulumi-deploy>=0.0.7",
    "boto3>=1.42.97",
    "boto3-stubs[ssm]>=1.42.97",
    "pydantic>=2.13.3",
]


[dependency-groups]
dev = [
    # Specific to this repository
    "boto3-stubs[all]", # version specification is in main dependencies already
    "faker>=40.15.0",

    # Managed by upstream template
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.1.0",
]

[tool.setuptools]
license-files = [] # kludge until this bug is fixed https://github.com/pypa/setuptools/issues/4759

[tool.uv]
package = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
